service.yml
apiVersion: v1
kind: Service
metadata:
  name: unlimited-memes-service
  labels:
    app: unlimited-memes
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: unlimited-memes
